<resources>
    <string name="app_name">Foody</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes">Recipes</string>
    <string name="fav_recipes">Favorites</string>
    <string name="food_joke">Food Joke</string>
    <string name="no_connection">No Internet Connection!</string>
    <string name="fab">fab</string>
    <string name="vegan">Vegan</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="low_fodmap">Low FODMAP</string>
    <string name="whole30">Whole30</string>
    <string name="apply">Apply</string>
    <string name="connection_timeout">Connection Timeout.</string>
    <string name="api_limited">API Key Limited.</string>
    <string name="not_found">Recipes Not Found.</string>
    <string name="unknown_error">Unknown Error!</string>
    <string name="search">Search</string>
    <string name="details">Details</string>
    <string name="overview">Overview</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="healthy">Healthy</string>
    <string name="cheap">Cheap</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="okay">Okay</string>
    <string name="recipe_saved">Recipe saved.</string>
    <string name="recipe_removed">Recipe removed.</string>
    <string name="no_fav_recipes">No favorite recipes!</string>
</resources>