<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="recipe"
            type="com.androdu.foody.models.Recipe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:nestedScrollingEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_main"
                    loadImageFromUrl="@{recipe.image}"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <View
                    android:id="@+id/v_gradient_overlay"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/gradient_overlay"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_main"
                    app:layout_constraintEnd_toEndOf="@+id/iv_main"
                    app:layout_constraintStart_toStartOf="@+id/iv_main"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/tv_time"
                    setNumOfMinutes="@{recipe.readyInMinutes}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_main"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageView
                    android:id="@+id/iv_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_time"
                    app:layout_constraintBottom_toTopOf="@+id/tv_time"
                    app:layout_constraintEnd_toEndOf="@id/tv_time"
                    app:layout_constraintStart_toStartOf="@+id/tv_time"
                    app:tint="@color/white" />

 
                <TextView
                    android:id="@+id/tv_likes"
                    setNumOfLikes="@{recipe.aggregateLikes}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_time"
                    app:layout_constraintEnd_toStartOf="@+id/tv_time" />

                <ImageView
                    android:id="@+id/iv_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_fav"
                    app:layout_constraintBottom_toTopOf="@+id/tv_likes"
                    app:layout_constraintEnd_toEndOf="@id/tv_likes"
                    app:layout_constraintStart_toStartOf="@+id/tv_likes"
                    app:tint="@color/red" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/courgette"
                    android:text="@{recipe.title}"
                    android:textColor="@color/darkGray"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_main" />

                <ImageView
                    android:id="@+id/iv_vegetarian"
                    applyColor="@{recipe.vegetarian}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_check"
                    app:layout_constraintStart_toStartOf="@+id/tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title"
                    app:tint="@color/darkGray" />

                <TextView
                    android:id="@+id/tv_vegetarian"
                    applyColor="@{recipe.vegetarian}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/vegetarian"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_vegetarian"
                    app:layout_constraintStart_toEndOf="@+id/iv_vegetarian"
                    app:layout_constraintTop_toTopOf="@+id/iv_vegetarian" />

                <ImageView
                    android:id="@+id/iv_vegan"
                    applyColor="@{recipe.vegan}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_check"
                    app:layout_constraintStart_toStartOf="@+id/iv_vegetarian"
                    app:layout_constraintTop_toBottomOf="@+id/iv_vegetarian"
                    app:tint="@color/darkGray" />

                <TextView
                    android:id="@+id/tv_vegan"
                    applyColor="@{recipe.vegan}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/vegan"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_vegan"
                    app:layout_constraintStart_toEndOf="@+id/iv_vegan"
                    app:layout_constraintTop_toTopOf="@+id/iv_vegan" />

                <ImageView
                    android:id="@+id/iv_gluten_free"
                    applyColor="@{recipe.glutenFree}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:src="@drawable/ic_check"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_vegetarian"
                    app:layout_constraintStart_toEndOf="@+id/tv_vegetarian"
                    app:layout_constraintTop_toTopOf="@+id/tv_vegetarian"
                    app:tint="@color/darkGray" />

                <TextView
                    android:id="@+id/tv_gluten_free"
                    applyColor="@{recipe.glutenFree}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/gluten_free"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_gluten_free"
                    app:layout_constraintStart_toEndOf="@+id/iv_gluten_free"
                    app:layout_constraintTop_toTopOf="@+id/iv_gluten_free" />

                <ImageView
                    android:id="@+id/iv_dairy_free"
                    applyColor="@{recipe.dairyFree}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_check"
                    app:layout_constraintStart_toStartOf="@+id/iv_gluten_free"
                    app:layout_constraintTop_toBottomOf="@+id/iv_gluten_free"
                    app:tint="@color/darkGray" />

                <TextView
                    android:id="@+id/tv_dairy_free"
                    applyColor="@{recipe.dairyFree}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/dairy_free"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_dairy_free"
                    app:layout_constraintStart_toEndOf="@+id/iv_dairy_free"
                    app:layout_constraintTop_toTopOf="@+id/iv_dairy_free" />

                <ImageView
                    android:id="@+id/iv_healthy"
                    applyColor="@{recipe.veryHealthy}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:src="@drawable/ic_check"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_gluten_free"
                    app:layout_constraintStart_toEndOf="@+id/tv_gluten_free"
                    app:layout_constraintTop_toTopOf="@+id/tv_gluten_free"
                    app:tint="@color/darkGray" />

                <TextView
                    android:id="@+id/tv_healthy"
                    applyColor="@{recipe.veryHealthy}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/healthy"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_healthy"
                    app:layout_constraintStart_toEndOf="@+id/iv_healthy"
                    app:layout_constraintTop_toTopOf="@+id/iv_healthy" />

                <ImageView
                    android:id="@+id/iv_cheap"
                    applyColor="@{recipe.cheap}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_check"
                    app:layout_constraintStart_toStartOf="@+id/iv_healthy"
                    app:layout_constraintTop_toBottomOf="@+id/iv_healthy"
                    app:tint="@color/darkGray" />

                <TextView
                    android:id="@+id/tv_cheap"
                    applyColor="@{recipe.cheap}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/cheap"
                    android:textColor="@color/darkGray"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_cheap"
                    app:layout_constraintStart_toEndOf="@+id/iv_cheap"
                    app:layout_constraintTop_toTopOf="@+id/iv_cheap" />

                <TextView
                    android:id="@+id/tv_summary"
                    parseHtml="@{recipe.summary}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_vegan"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>